--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Marcelo Carvalho</title>
+    <!-- Estilizando o portfólio -->
+    <style>
+        body{
+            background: rgba(4, 26, 88, 0.438);
+            font-size: 22px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        p{
+            font-size: 15;
+            font-family: Helvetica, sans-serif;
+
+        }
+        #habilidades {
+            color: rgb(1, 111, 138);
+        }
+        #links {
+            color: rgb(1, 111, 138);
+        }
+        #biografia {
+            color: rgb(1, 111, 138);
+        }
+        a{
+            color: rgb(9, 54, 51);
+        }
+
+    </style>
 </head>
 <body>
     <h3>Índice</h3>
@@ -42,6 +69,5 @@
     <a href="https://www.linkedin.com/in/marcelo-carvalho-290760202/" target="_blank">Linkedin</a>
     <br>
 
-    
 </body>
 </html>
