Tamanho das habilidades

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
         a{
             color: rgb(9, 54, 51);
         }
+        .habilidade1{
+            font-size: 25px;
+        }
+        .habilidade2{
+            font-size: 22px;
+        }
+        .habilidade3{
+            font-size: 20px;
+        }
+        .habilidade4{
+            font-size: 19px;
+        }
+        .habilidade5{
+            font-size: 18px;
+        }
 
     </style>
 </head>
@@ -57,11 +72,11 @@
 
     <h3 id="habilidades">Habilidades</h3>
     <ul>
-        <li><strong>Análise de redes</strong></li>
-        <li>Servidores</li>
-        <li>JavaScript</li>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li class="habilidade1"><strong>Análise de redes</strong></li>
+        <li class="habilidade2">Servidores</li>
+        <li class="habilidade3">JavaScript</li>
+        <li class="habilidade4">HTML</li>
+        <li class="habilidade5">CSS</li>
     </ul>
     <h2 id="links">Links</h2>
     <a href="#foto">Foto do Marcelo</a>
